--- a/OlveczkyLabSignatures/res/menu/main.xml
+++ b/OlveczkyLabSignatures/res/menu/main.xml
@@ -15,5 +15,6 @@
             <item android:id="@+id/item6" android:title="@string/six"/>
         </menu>
     </item>
+    <item android:id="@+id/Presenter" android:title="@string/Presenter"></item>
 
 </menu>
