--- a/OlveczkyLabSignatures/res/menu/presenter.xml
+++ b/OlveczkyLabSignatures/res/menu/presenter.xml
@@ -1,9 +1,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+    <item android:id="@+id/Draw" android:title="@string/Draw" android:orderInCategory="1"></item>
+    <item android:id="@+id/Analysis" android:orderInCategory="2" android:title="@string/Analysis"></item>
 
 </menu>
